# SPARSE_MATRICES_BY_ZLATEV

./: .gitignore  CMakeLists.txt  README.md  generate_visual_project.bat  sparse_matrices.hpp
code/: code.opensdf  code.sln
code/Debug/: complex_matrices.ilk  dense_matrices.ilk  sparse_matrices.ilk  test.ilk
code/code/: code.vcxproj  code.vcxproj.filters
code/code/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  sparse_matrices.lastbuildstate  vc100.idb
code/complex_matrices/: complex_main.cpp  complex_matrices.vcxproj  complex_matrices.vcxproj.filters  main.cpp
code/complex_matrices/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
code/dense_matrices/: dense_main.cpp  dense_matrices.vcxproj  dense_matrices.vcxproj.filters
code/dense_matrices/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog  vc100.idb
code/sparse_matrices/: code.vcxproj  code.vcxproj.filters  sparse_main.cpp  to_tex.cpp
code/std_math/: dense_matrices.hpp  matrix_generators.cpp  matrix_generators.hpp  sparse_matrices.hpp  std_math.hpp
code/test/: example_matrix.txt  example_scheme.txt  test.vcxproj  test_main.cpp
code/tests/: main_test1.cpp  main_test2.cpp  main_test_sor.cpp
documentation/: chapter1.tex  main_file.aux  main_file.blg  main_file.dvi  main_file.out  main_file.toc  mgrwms.cls  sparse_matrices_manual.tex
src/: sparse_matrices.hpp
tests/: main.cpp  matrix_rand_generators.hpp
(+31 files in other folders)
